# archstyle55

./: .gitattributes  .gitignore  ATTRIBUTIONS.csv  LICENSE  README.md  pyproject.toml
pipeline/: config.py
pipeline/evaluation/: calibration.py  clip_zeroshot.py  ensemble.py  evaluate.py  run_clip_zeroshot.py  stat_tests.py  tta.py
pipeline/reports/: ablation_compare.py  aggregate_runs.py  class_aliases.py  compute_cost.py  compute_cost_table.py  data_figures.py  embeddings.py  error_gallery.py  figures.py  figures_aggregate.py  make_report.py  perclass_delta.py  perclass_delta_grid.py  posthoc_class_drop.py  run_calibration.py  run_ensemble.py  training_figures.py  xai_showcase.py  xai_showcase_dinov2.py  xai_showcase_vit.py
pipeline/scripts/: draw_pipeline.py  draw_segmentation_showcase.py  kaggle_train.ipynb  make_ablation_splits.py  multi_seed.py  pack_dataset.py  rename_dataset.py
pipeline/segmentation/: compare_segmenters.py  extract_attributes.py  hybrid.py  hybrid_emb.py  hybrid_stacking.py  run_segmentation.py  segmentor.py
pipeline/training/: ema.py  logger.py  loop.py  mixers.py  repro.py  run.py  scheduler.py
pipeline/xai/: cam.py  prototypes.py  transformer_xai.py
results/: INDEX.md  compute_cost.json  compute_cost_table.csv  compute_cost_table.md  hybrid_histgbm.pkl  pairwise_mcnemar.csv  per_class_recall.csv  posthoc_class_drop.csv  posthoc_class_drop.md  summary_table.csv  summary_table.md
results/ablation_v2s/: ablation_per_class.md  (+1 more)
service/: .env.example  .gitignore  DEPLOY.md  DEPLOY_LIVE.md  Makefile  README.md  docker-compose.yml
(+119 files in other folders)
